Bug 115670 - openfile .docx unnecessary grey box or area beside left vertical box
Summary: openfile .docx unnecessary grey box or area beside left vertical box
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:6.2.0
Keywords: filter:docx
Depends on:
Blocks:
 
Reported: 2018-02-13 05:37 UTC by vihsa
Modified: 2018-08-30 16:35 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description vihsa 2018-02-13 05:37:29 UTC
open Paul Wilson CRR seminar notice.docx attachment 62036 [details] on bug# 50295
pdf export of docx attachment 74994 [details] bug# 50295
screenshot on lo viewer master daily build https://github.com/kr1shna-opensource/qa/blob/master/docs/_screenshot/50295%20grey%20shadow.png

current behaviour:
grey area or box beside left vertical box

expected behaviour:
similar to pdf export

tinderbox: buildname: Android-ARM@24-Bytemark-Hosting
tinderbox: tree: MASTER
tinderbox: pull time 2018-02-12 15:26:16
tinderbox: git sha1s
core:9cf2616c5e709b595eeee6ab88dacdfad2003f98

lyf flame 3, android 5.1
Comment 1 raal 2018-03-22 14:15:08 UTC
Confirm. Version: 6.1.0.0.alpha0+
Build ID: 3b3e203
Comment 2 Justin L 2018-08-22 11:57:40 UTC
The shadow still exists in Ubuntu LO 6.2 master. It was already there the first time the document opened half-decently in LO 4.1.
Comment 3 Justin L 2018-08-22 15:37:35 UTC
The problem is the LO defaults to "on" while word must default to off. missing is  on="t".  If I add on="f" then LO opens it OK.

<v:shadow type="perspective" color="#bfbfbf" opacity=".5" origin="-.5,-.5" offset="51pt,-10pt" offset2="114pt,-8pt" matrix=".75,,,.75"/>

A very familiar-looking unit test already exists in ooxmlexport9: tdf103982.docx

proposed fix at https://gerrit.libreoffice.org/59457
Comment 4 Commit Notification 2018-08-30 13:40:21 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b914c4c98bfca32168ff05fec7cc687c95754d36

tdf#115670 vml shadow: shadow is off unless explicitly set on

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.