tdf#115670 vml shadow: shadow is off unless explicitly set on

The absence of "on=" is treated in Word (tested 2003) as off.

Change-Id: Ibc6b0e5ca0f25a9c3ca1b9505fa24c4d821bfd03